@@ -6,6 +6,7 @@ public class CBCCfgCannons extends ConfigBase {
 
 	public final ConfigInt maxCannonLength = i(64, 3, "maxCannonLength", Comments.maxCannonLength);
 	public final ConfigFloat barrelSpreadReduction = f(1.0f, 0.0f, "barrelSpreadReduction", Comments.barrelSpreadReduction);
+	public final ConfigFloat minimumBigCannonSpread = f(0.1f, 0.0f, "minimumBigCannonSpread");
 	public final ConfigInt quickfiringBreechLoadingCooldown = i(40, 0, "quickfiringBreechLoadingCooldown", Comments.quickfiringBreechLoadingCooldown);
 	public final ConfigInt quickfiringBreechOpeningCooldown = i(5, 0, "quickfiringBreechOpeningCooldown", Comments.quickfiringBreechOpeningCooldown);
 	public final ConfigFloat bigCannonRecoilScale = f(4f, 0, "bigCannonRecoilScale");
